--- a/imgui.ini
+++ b/imgui.ini
@@ -183,3 +183,18 @@ Pos=0,500
 Size=280,240
 Collapsed=0
 
+[Window][postEffect]
+Pos=1000,450
+Size=280,300
+Collapsed=0
+
+[Window][shader]
+Pos=0,0
+Size=300,130
+Collapsed=0
+
+[Window][post]
+Pos=93,61
+Size=158,226
+Collapsed=0
+
