ミニマップに敵の位置を表示させた

--- a/SoulHunter.vcxproj.filters
+++ b/SoulHunter.vcxproj.filters
@@ -250,10 +250,10 @@
       <Filter>SourceCords\gamesystem\ui\TutoRial</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\MapChange.cpp">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\scenechange.cpp">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\save\Save.cpp">
       <Filter>SourceCords\gamesystem\save</Filter>
@@ -382,16 +382,16 @@
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\JsonObj\IntroductionObj.cpp">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\JsonObj\TitleObj.cpp">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\JsonObj\BossStagObj.cpp">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\scenechange\BossSceneChange.cpp">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\boss\FireBall.cpp">
       <Filter>SourceCords\gamesystem\boss\Various</Filter>
@@ -403,7 +403,7 @@
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\gamesystem\JsonObj\ClearObj.cpp">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClCompile>
     <ClCompile Include="SourceCode\engine\shake\Shake.cpp">
       <Filter>SourceCords\engine\shake</Filter>
@@ -621,10 +621,10 @@
       <Filter>SourceCords\gamesystem\ui\TutoRial</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\MapChange.h">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\scenechange.h">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\save\Save.h">
       <Filter>SourceCords\gamesystem\save</Filter>
@@ -756,16 +756,16 @@
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\JsonObj\IntroductionObj.h">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\JsonObj\TitleObj.h">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\JsonObj\BossStagObj.h">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scenechange\BossSceneChange.h">
-      <Filter>SourceCords\gamesystem\scene\scenechange</Filter>
+      <Filter>SourceCords\gamesystem\scenechange</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\boss\FireBall.h">
       <Filter>SourceCords\gamesystem\boss\Various</Filter>
@@ -777,7 +777,7 @@
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\JsonObj\ClearObj.h">
-      <Filter>SourceCords\gamesystem\gamecamera\JsonObj</Filter>
+      <Filter>SourceCords\gamesystem\JsonObj</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\engine\shake\Shake.h">
       <Filter>SourceCords\engine\shake</Filter>
@@ -1005,11 +1005,11 @@
     <Filter Include="SourceCords\engine\shake">
       <UniqueIdentifier>{2a7ab0e4-35b2-424d-b2f9-dff4e3205eff}</UniqueIdentifier>
     </Filter>
-    <Filter Include="SourceCords\gamesystem\scene\scenechange">
-      <UniqueIdentifier>{6b1cdae9-8eae-43b6-9011-3cc929ef6cd8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="SourceCords\gamesystem\gamecamera\JsonObj">
+    <Filter Include="SourceCords\gamesystem\JsonObj">
       <UniqueIdentifier>{e17ea6d3-67d8-43c2-980a-bbd86560e76b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="SourceCords\gamesystem\scenechange">
+      <UniqueIdentifier>{6b1cdae9-8eae-43b6-9011-3cc929ef6cd8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
