プレイヤーのエフェクトをまとめた

--- a/SoulHunter.vcxproj.filters
+++ b/SoulHunter.vcxproj.filters
@@ -414,6 +414,9 @@
     <ClCompile Include="SourceCode\gamesystem\ParticleManager\ParticleTex.cpp">
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\effect\PlayerEffect.cpp">
+      <Filter>SourceCords\gamesystem\effect\Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\enginebase\AbstractSceneFactory.h">
@@ -793,6 +796,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\ParticleManager\ParticleTex.h">
       <Filter>SourceCords\gamesystem\ParticleManager</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\effect\PlayerEffect.h">
+      <Filter>SourceCords\gamesystem\effect\Player</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
