バグ多すぎたので修正(主にボス戦のライト関連)

--- a/imgui.ini
+++ b/imgui.ini
@@ -201,7 +201,7 @@ Collapsed=0
 [Window][Scene]
 Pos=1000,150
 Size=280,150
-Collapsed=1
+Collapsed=0
 
 [Window][Always]
 Pos=60,60
@@ -216,5 +216,10 @@ Collapsed=0
 [Window][Skill]
 Pos=60,60
 Size=121,65
+Collapsed=0
+
+[Window][a]
+Pos=60,60
+Size=264,248
 Collapsed=0
 
