--- a/imgui.ini
+++ b/imgui.ini
@@ -223,3 +223,13 @@ Pos=60,60
 Size=264,248
 Collapsed=0
 
+[Window][DeleteThornObj]
+Pos=280,500
+Size=280,230
+Collapsed=0
+
+[Window][EnemySetObj]
+Pos=0,500
+Size=280,230
+Collapsed=0
+
