--- a/SoulHunter.vcxproj
+++ b/SoulHunter.vcxproj
@@ -285,6 +285,7 @@
     <ClCompile Include="SourceCode\gamesystem\effect\WallAttackEffect.cpp" />
     <ClCompile Include="SourceCode\gamesystem\enemy\BirdEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\enemy\Enemy.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\enemy\EnemyManager.cpp" />
     <ClCompile Include="SourceCode\gamesystem\enemy\InterEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\enemy\ThornEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\enemy\ThornObj.cpp" />
@@ -411,6 +412,7 @@
     <ClInclude Include="SourceCode\gamesystem\effect\WallAttackEffect.h" />
     <ClInclude Include="SourceCode\gamesystem\enemy\BirdEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\enemy\Enemy.h" />
+    <ClInclude Include="SourceCode\gamesystem\enemy\EnemyManager.h" />
     <ClInclude Include="SourceCode\gamesystem\enemy\InterEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\enemy\ThornEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\enemy\ThornObj.h" />
