--- a/SoulHunter.vcxproj.filters
+++ b/SoulHunter.vcxproj.filters
@@ -411,6 +411,9 @@
     <ClCompile Include="SourceCode\gamesystem\enemy\EnemyManager.cpp">
       <Filter>SourceCords\gamesystem\enemy\Common</Filter>
     </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\backobj\BackObjManager.cpp">
+      <Filter>SourceCords\gamesystem\backobj\Common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SourceCode\engine\enginebase\AbstractSceneFactory.h">
@@ -787,6 +790,9 @@
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\enemy\EnemyManager.h">
       <Filter>SourceCords\gamesystem\enemy\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\backobj\BackObjManager.h">
+      <Filter>SourceCords\gamesystem\backobj\Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
