敵セット出来るようになった　動きはまた明日

--- a/imgui.ini
+++ b/imgui.ini
@@ -238,3 +238,13 @@ Pos=60,60
 Size=32,99
 Collapsed=0
 
+[Window][Normal]
+Pos=60,60
+Size=100,82
+Collapsed=0
+
+[Window][Follow]
+Pos=306,149
+Size=93,133
+Collapsed=0
+
