--- a/imgui.ini
+++ b/imgui.ini
@@ -250,6 +250,16 @@ Collapsed=0
 
 [Window][Tutorial]
 Pos=60,60
-Size=232,242
+Size=59,71
+Collapsed=0
+
+[Window][Thorn]
+Pos=60,60
+Size=100,133
+Collapsed=0
+
+[Window][Bound]
+Pos=60,60
+Size=107,286
 Collapsed=0
 
