--- a/SoulHunter.vcxproj
+++ b/SoulHunter.vcxproj
@@ -328,6 +328,7 @@
     <ClCompile Include="SourceCode\gamesystem\ui\CompassPause.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ui\DushPause.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ui\HealPause.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\ui\JumpPause.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ui\LibraPause.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ui\MiniMap.cpp" />
     <ClCompile Include="SourceCode\gamesystem\ui\Option.cpp" />
@@ -458,6 +459,7 @@
     <ClInclude Include="SourceCode\gamesystem\ui\CompassPause.h" />
     <ClInclude Include="SourceCode\gamesystem\ui\DushPause.h" />
     <ClInclude Include="SourceCode\gamesystem\ui\HealPause.h" />
+    <ClInclude Include="SourceCode\gamesystem\ui\JumpPause.h" />
     <ClInclude Include="SourceCode\gamesystem\ui\LibraPause.h" />
     <ClInclude Include="SourceCode\gamesystem\ui\MiniMap.h" />
     <ClInclude Include="SourceCode\gamesystem\ui\Option.h" />
